# business-reviews

./: .editorconfig  .unibeautifyrc.yml  LICENSE  README.md  babel.cfg  docker-compose.yml  pyproject.toml  sample.env  wsgi.py
app/: __init__.py  config.py
app/auth/: __init__.py  forms.py  routes.py
app/errors/: __init__.py
app/main/: __init__.py  forms.py  routes.py
app/models/: businesses.py  reviews.py  users.py
app/models/utils/: mixins.py  types.py
app/static/css/: styles.css
app/templates/: _business_card.html  _review_card.html  _review_modal.html  _star_rating.html  auth.html  base.html  business.html  business_details.html  index.html
app/templates/errors/: 404.html  500.html
app/translations/es/LC_MESSAGES/: messages.po
migrations/versions/: 980ce1f37504_initial_migration.py
tests/: conftest.py
tests/functionals/: test_auth.py  test_main.py
tests/units/: test_model_user.py
