[tool.poetry]
name = "flask-postgresql-sample"
version = "0.1.0"
description = "Aplicación de ejemplo desarrollada con Flask. Para uso educativo."
authors = ["Francisco González-Cavero <fa.gonzalezcavero@edu.gva.es>"]

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.19.2"
Flask = "^2.0.3"
Flask-Argon2 = "^0.2.0"
Flask-Login = "^0.5.0"
psycopg2-binary = { version = "^2.9.3", optional = true }
psycopg2 = { version = "^2.9.3", optional = true }
mysqlclient = { version = "^2.1.0", optional = true }
PyMySQL = { extras = ["rsa"], version = "^1.0.2", optional = true }
Flask-SQLAlchemy = "^2.5.1"
Flask-Migrate = "^3.1.0"
Flask-WTF = "^1.0.0"
Bootstrap-Flask = "^2.0.2"
email-validator = "^1.1.3"
Flask-Moment = "^1.0.2"
requests = "^2.27.1"
flask-redis = "^0.4.0"
Flask-Babel = "^2.0.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^22.1.0"
isort = "^5.10.1"
pytest = "^7.0"
fakeredis = { extras = ["lua"], version = "^1.7.1" }

[tool.poetry.extras]
mysql = ["mysqlclient"]
pgsql = ["psycopg2"]
mysql-alt = ["PyMySQL"]
pgsql-alt = ["psycopg2-binary"]

[tool.black]
line-length = 120
skip-string-normalization = true

[tool.isort]
profile = "black"
multi_line_output = 3

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
